sudoku/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sudoku-frontend
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/forwarded-for-header: "CF-Connecting-IP"
spec:
  ingressClassName: nginx
  rules:
    - host: sudoku.week-book.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sudoku-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - sudoku.week-book.ru
      secretName: sudoku-tls
